--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    
+    "start": "node server.js",
+    "build": "ng build",
+    "heroku-postbuild": "ng build --prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -22,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "express": "^4.17.1",
     "primeflex": "^3.0.1",
     "primeng": "^12.2.0-rc.1",
     "rxjs": "~6.6.0",
